@@ -34,14 +34,14 @@ public final class TitleAPI {
     /**
      * 完整配置推送。
      *
-     * @param text       兜底文本（titles 为空时显示）
-     * @param titles     轮播序列
-     * @param typewriter 打字机逐字显现
-     * @param random     随机轮换（多句时随机选句；优先于打字机效果）
-     * @param speed      打字机每字符毫秒
-     * @param interval   每句展示时长基准毫秒
-     * @param holdMs     打完停留毫秒（-1 = 取 interval）
-     * @param loop       是否循环
+     * text：兜底文本（titles 为空时显示）
+     * titles：轮播序列
+     * typewriter：打字机逐字显现
+     * random：随机轮换（多句时随机选句；优先于打字机效果）
+     * speed：打字机每字符毫秒
+     * interval：每句展示时长基准毫秒
+     * holdMs：打完停留毫秒（-1 = 取 interval）
+     * loop：是否循环
      */
     public boolean push(Player player, String text, List<String> titles,
                         boolean typewriter, boolean random, int speed, int interval,
@@ -73,7 +73,7 @@ public final class TitleAPI {
 
     private Iterable<? extends Player> players() {
         OpenDreamCorePlugin plugin = OpenDreamCoreAPI.plugin();
-        return plugin == null ? List.of() : plugin.getServer().getOnlinePlayers();
+        return plugin == null ? java.util.Collections.emptyList() : plugin.getServer().getOnlinePlayers();
     }
 
     private boolean send(Player player, WindowTitlePush push) {
